--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,14 +55,15 @@ jobs:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY_NAME }}
           IMAGE_TAG: latest
-        run:
-         # Build a docker container and
-         # push it to ECR so that it can
-         # be deployed to ECS.
+        run: |
+          # Build a docker container and push it to ECR
 
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-          echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+        
+          # Output image name for later steps
+          echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
+
 
   # Continuous-Deployment:
   #   needs: build-and-push-ecr-image
