--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,8 +71,7 @@ jobs:
 
   Continuous-Deployment:
     needs: build-and-push-ecr-image
-    runs-on: ip-172-31-15-49
-
+    runs-on: self-hosted
     steps:
       - name: Checkout
         uses: actions/checkout@v3
