final changes to deployment

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -126,7 +126,9 @@ jobs:
         uses: aws-actions/amazon-ecr-login@v1
 
       - name: Pull latest image
-        run: docker pull ${{ secrets.AWS_ECR_LOGIN_URI }}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
+        # run: docker pull ${{ secrets.AWS_ECR_LOGIN_URI }}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
+        run: docker pull 045400793826.dkr.ecr.us-east-1.amazonaws.com/networksecurity:latest
+t
 
       - name: Stop and remove old container if running
         run: |
