--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -149,7 +149,6 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-
       - name: Build, tag, and push image to Amazon ECR
         id: build-image
         env:
@@ -158,13 +157,12 @@ jobs:
           IMAGE_TAG: latest
         run: |
           echo "Building Docker image..."
-          docker buildx build --builder default -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG . --load
-        
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+
           echo "Pushing image to ECR..."
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         
-          echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
-
+          echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT   
 
   Continuous-Deployment:
     needs: build-and-push-ecr-image
