--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -147,8 +147,8 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      # - name: Set up Docker Buildx
+      #   uses: docker/setup-buildx-action@v3
       - name: Build, tag, and push image to Amazon ECR
         id: build-image
         env:
