final changes to deployment

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,102 +1,4 @@
-# name: workflow
-
-# on:
-#   push:
-#     branches:
-#       - main
-#     paths-ignore:
-#       - 'README.md'
-
-# permissions:
-#   id-token: write
-#   contents: read
-
-# jobs:
-#   integration:
-#     name: Continuous Integration
-#     runs-on: ubuntu-latest
-#     steps:
-#       - name: Checkout Code
-#         uses: actions/checkout@v3
-
-#       - name: Lint code
-#         run: echo "Linting repository"
-
-#       - name: Run unit tests
-#         run: echo "Running unit tests"
-
-#   build-and-push-ecr-image:
-#     name: Continuous Delivery
-#     needs: integration
-#     runs-on: ubuntu-latest
-#     steps:
-#       - name: Checkout Code
-#         uses: actions/checkout@v3
-
-#       - name: Install Utilities
-#         run: |
-#           sudo apt-get update
-#           sudo apt-get install -y jq unzip
-#       - name: Configure AWS credentials
-#         uses: aws-actions/configure-aws-credentials@v1
-#         with:
-#           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-#           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-#           aws-region: ${{ secrets.AWS_REGION }}
-
-#       - name: Login to Amazon ECR
-#         id: login-ecr
-#         uses: aws-actions/amazon-ecr-login@v1
-
-#       - name: Build, tag, and push image to Amazon ECR
-#         id: build-image
-#         env:
-#           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-#           ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY_NAME }}
-#           IMAGE_TAG: latest
-#         run: |
-#           # Build a docker container and
-#           # push it to ECR so that it can be deployed to ECS.
-          
-#           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-#           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-#           echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
-
-#   Continuous-Deployment:
-#     needs: build-and-push-ecr-image
-#     runs-on: self-hosted
-#     steps:
-#       - name: Checkout
-#         uses: actions/checkout@v3
-
-#       - name: Configure AWS credentials
-#         uses: aws-actions/configure-aws-credentials@v1
-#         with:
-#           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-#           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-#           aws-region: ${{ secrets.AWS_REGION }}
-
-#       - name: Login to Amazon ECR
-#         id: login-ecr
-#         uses: aws-actions/amazon-ecr-login@v1
-      
-      
-#       - name: Pull latest images
-#         run: |
-#          docker pull ${{secrets.AWS_ECR_LOGIN_URI}}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
-         
-#       #- name: Stop and remove  container if running
-#        # run: |
-#         # docker ps -q --filter "name=networksecurity" | grep -q . && docker stop networksecurity && docker rm -fv networksecurity
-       
-#       - name: Run Docker Image to serve users
-#         run: |
-#          docker run -d -p 8080:8080 --ipc="host" --name=networksecurity -e 'AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}' -e 'AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}' -e 'AWS_REGION=${{ secrets.AWS_REGION }}'  ${{secrets.AWS_ECR_LOGIN_URI}}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
-#       - name: Clean previous images and containers
-#         run: |
-#          docker system prune -f
-
-name: workflow
+name: CI/CD Workflow
 
 on:
   push:
@@ -110,6 +12,9 @@ permissions:
   contents: read
 
 jobs:
+  # -------------------------
+  # Continuous Integration
+  # -------------------------
   integration:
     name: Continuous Integration
     runs-on: ubuntu-latest
@@ -123,8 +28,11 @@ jobs:
       - name: Run unit tests
         run: echo "Running unit tests"
 
+  # -------------------------
+  # Build & Push Docker Image
+  # -------------------------
   build-and-push-ecr-image:
-    name: Continuous Delivery
+    name: Build & Push Docker Image
     needs: integration
     runs-on: ubuntu-latest
     steps:
@@ -147,8 +55,11 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
 
-      # - name: Set up Docker Buildx
-      #   uses: docker/setup-buildx-action@v3
+      - name: Debug ECR variables
+        run: |
+          echo "Registry: ${{ steps.login-ecr.outputs.registry }}"
+          echo "Repository: ${{ secrets.ECR_REPOSITORY_NAME }}"
+
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
@@ -156,29 +67,21 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: ${{ steps.login-ecr.outputs.registry }}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
-
-      - name: Build, tag, and push image to Amazon ECR
         id: build-image
-        env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY_NAME }}
-          IMAGE_TAG: latest
-        working-directory: ${{ github.workspace }}
+
+      - name: Set output image
         run: |
-          echo "Building Docker image..."
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f Dockerfile .
+          echo "image=${{ steps.login-ecr.outputs.registry }}/${{ secrets.ECR_REPOSITORY_NAME }}:latest" >> $GITHUB_OUTPUT
 
-          echo "Pushing image to ECR..."
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-
-          echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
- 
-
-  Continuous-Deployment:
+  # -------------------------
+  # Continuous Deployment
+  # -------------------------
+  continuous-deployment:
+    name: Continuous Deployment
     needs: build-and-push-ecr-image
     runs-on: self-hosted
     steps:
-      - name: Checkout
+      - name: Checkout Code
         uses: actions/checkout@v3
 
       - name: Configure AWS credentials
@@ -189,25 +92,26 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1
+        uses: aws-actions/amazon-ecr-login@v2
 
-      - name: Pull latest image
+      - name: Pull latest Docker image
         run: |
-          docker pull ${{ secrets.AWS_ECR_LOGIN_URI }}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
+          docker pull ${{ steps.login-ecr.outputs.registry }}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
 
-      #- name: Stop and remove existing container
-      #  run: |
-      #    docker ps -q --filter "name=networksecurity" | grep -q . && docker stop networksecurity && docker rm -fv networksecurity
+      - name: Stop and remove old container
+        run: |
+          if docker ps -q --filter "name=networksecurity" | grep -q .; then
+            docker stop networksecurity
+            docker rm -fv networksecurity
+          fi
 
-      - name: Run Docker Image to serve users
+      - name: Run Docker container
         run: |
           docker run -d -p 8080:8080 --ipc="host" --name=networksecurity \
-          -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
-          -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
-          -e AWS_REGION=${{ secrets.AWS_REGION }} \
-          ${{ secrets.AWS_ECR_LOGIN_URI }}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
+            -e "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}" \
+            -e "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" \
+            -e "AWS_REGION=${{ secrets.AWS_REGION }}" \
+            ${{ steps.login-ecr.outputs.registry }}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
 
-      - name: Clean up unused Docker resources
-        run: |
-          docker system prune -f
+      - name: Clean unused Docker resources
+        run: docker system prune -f
