final changes to deployment

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,8 +66,7 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          # fallback to hardcoded registry if output is empty
-          tags: ${{ steps.login-ecr.outputs.registry || '045400793826.dkr.ecr.us-east-1.amazonaws.com' }}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
+          tags: 045400793826.dkr.ecr.us-east-1.amazonaws.com/networksecurity:latest
         id: build-image
 
       - name: Set output image
