--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -94,6 +94,11 @@ jobs:
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
+      
+      - name: Clean Docker disk
+        run: |
+          docker system prune -af
+          docker volume prune -f
 
       - name: Pull latest Docker image
         run: |
