--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -95,16 +95,16 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
       
-      - name: Push image
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: 045400793826.dkr.ecr.us-east-1.amazonaws.com/networksecurity:latest
+      # - name: Push image
+      #   uses: docker/build-push-action@v4
+      #   with:
+      #     context: .
+      #     file: ./Dockerfile
+      #     push: true
+      #     tags: 045400793826.dkr.ecr.us-east-1.amazonaws.com/networksecurity:latest
 
       - name: Pull latest image
-        run: docker pull ${{ secrets.AWS_ECR_LOGIN_URI }}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
+        run: docker pull 045400793826.dkr.ecr.us-east-1.amazonaws.com/networksecurity:latest
       - name: Run Docker container
         run: |
           docker run -d -p 8080:8080 --ipc="host" --name=networksecurity \
